refactor: replace get(0) with getFirst() in event assertions across multiple classes